--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,24 @@
-# Configuration options are documented at:
-# http://docs.travis-ci.com/user/languages/javascript-with-nodejs/
-sudo: false
 language: node_js
 node_js:
   - '16'
+  - '18'
+  - '20'
+
+# Use npm ci for faster, more reliable installs
+install:
+  - npm ci
+
+# Run tests
+script:
+  - npm test
+
+# Cache dependencies to speed up builds
+cache:
+  directories:
+    - "$HOME/.npm"
+
+# Notify on success/failure
+notifications:
+  email:
+    on_success: change
+    on_failure: always
